# ai-skills

./: LICENSE  README.MD  install.ps1  install.sh
.agents/plugins/: marketplace.json
.github/plugin/: marketplace.json
brainstorming/: plugin.json
brainstorming/.codex-plugin/: plugin.json
brainstorming/.github/plugin/: plugin.json
brainstorming/skills/brainstorming/: SKILL.md  visual-companion.md
brainstorming/skills/brainstorming/scripts/: frame-template.html  start-server.sh  stop-server.sh
coding-python/: README.md  SKILL.md  plugin.json
coding-python/.codex-plugin/: plugin.json
coding-python/.github/plugin/: plugin.json
coding-python/hooks/: hooks.json  setup-shims.bats  setup-shims.sh
coding-python/hooks/shims/: pip  pip-shim.bats  pip3  pipx  pipx-shim.bats  python  python-shim.bats  python3  uv  uv-shim.bats
coding-python/skills/coding-python/: SKILL.md
coding-python/skills/coding-python/references/: dependency-automation.md  migration-checklist.md  pep723-scripts.md  pyproject.md  ruff.md  security-hardening.md  testing.md  uv-commands.md
coding-python/skills/coding-python/templates/: pep723_script.py  pyproject.toml
coding-python/templates/: pyproject.toml
writing-plans/: README.md  plugin.json
writing-plans/.codex-plugin/: plugin.json
writing-plans/skills/writing-plans/: SKILL.md
writing-plans/skills/writing-plans/references/: plan-document-reviewer-prompt.md
