[project]
name = "my-project"
version = "0.1.0"
description = ""
# readme = "README.md"  # Uncomment if you have a README.
requires-python = ">=3.12"
dependencies = []

# PEP 735 dependency groups (supported by uv, and increasingly by other tooling)
[dependency-groups]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Practical default set for everyday projects.
# Expand if the repo wants stricter rules.
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--cov=REPLACE_WITH_IMPORT_PACKAGE",
  "--cov-report=term-missing",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
